--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.pollapp</groupId>
 	<artifactId>PollApp</artifactId>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 	<version>0.1</version>
 	<name>PollApp Maven Webapp</name>
 	<url>http://maven.apache.org</url>
@@ -117,6 +117,16 @@
 					</execution>
 				</executions>
 			</plugin>
+				<plugin>
+					<groupId>com.heroku.sdk</groupId>
+					<artifactId>heroku-maven-plugin</artifactId>
+					<version>2.0.3</version>
+					<configuration>
+						<processTypes>
+							<web>java $JAVA_OPTS -cp target/classes:target/dependency/* Main</web>
+						</processTypes>
+					</configuration>
+				</plugin>
 		</plugins>
 	</build>
 
