--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,36 @@
-spring.datasource.url: ${JDBC_DATABASE_URL:}
-spring.datasource.hikari.connection-timeout=30000
-spring.datasource.hikari.maximum-pool-size=10
+# mysql database
+mysql.datasource.driver=com.mysql.jdbc.Driver
+mysql.datasource.url=jdbc:mysql://localhost:3306/pollapp
+mysql.datasource.username=root
+mysql.datasource.password=coderslab
+
+# heroku database
+heroku.datasource.driver=org.postgresql.Driver
+heroku.datasource.maxActive=10
+heroku.datasource.maxIdle=5
+heroku.datasource.minIdle=2
+heroku.datasource.initialSize=5
+heroku.datasource.removeAbandoned=true
+
+heroku.datasource.url=${JDBC_DATABASE_URL}
+heroku.datasource.username=${JDBC_DATABASE_USERNAME}
+heroku.datasource.password=${JDBC_DATABASE_PASSWORD}
+heroku.datasource.hikari.connection-timeout=30000
+heroku.datasource.hikari.maximum-pool-size=10
 
 logging.level.org.springframework=INFO
 
-spring.profiles.active=production
+heroku.profiles.active=production
 
 server.port=${PORT:5000}
+
+
+# Hibernate
+hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
+hibernate.show_sql: true
+hibernate.hbm2ddl.auto: update
+entitymanager.packagesToScan: com.pollapp
+
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.initialize=false
+spring.datasource.continue-on-error: true
